samples/_failures_safe/1761496907_42ab6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1911b68.c: In function ‘main’:
./samples/SAFE/__tmp_f1911b68.c:159:5: error: expected expression at end of input
  159 |     if (scanf("%d %d", &start, &
      |     ^~
./samples/SAFE/__tmp_f1911b68.c:159:5: error: expected declaration or statement at end of input
